--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/Northstar/300x600_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/Northstar/300x600_Northstar.htm
@@ -173,7 +173,7 @@
                 cta.style.width = cta.offsetWidth + 'px';
 
               } else if(layout == 'multipleimagesoffer') {
-                content.styleProperties = "{'#cta': {x:0,y:0}, '#productLableLogo': {css:{display:'block'}}}";
+                content.styleProperties = "{'#cta': {x:0,y:0}, '#productLableLogo': {css:{display:'block', left:'-5px'}}}";
                 var cta = document.querySelector("#cta");
                 cta.style.left = "20px";
                 cta.style.width = "auto";
