--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/BeaverCreek/728x90_BeaverCreek.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/BeaverCreek/728x90_BeaverCreek.htm
@@ -181,7 +181,7 @@
                  frameText[i].style.lineHeight = '1.2';
                 }
               } else if(layout == 'multipleimagesoffer') {
-                content.styleProperties = "{'#cta': {y:25}, '#productLableLogo': {css:{display:'block'}}}";
+                content.styleProperties = "{'#cta': {y:25}, '#productLableLogo': {css:{display:'block', left:'-5px'}}}";
                 var cta = document.querySelector("#cta");
                 cta.style.left = "443px";
                 cta.style.width = "auto";
