--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Okemo/160x600_Okemo.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/160x600/Okemo/160x600_Okemo.htm
@@ -214,7 +214,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#006691";
+            ctx.fillStyle = "#EF700C";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
