--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/Hunter/300x600_Hunter.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/Hunter/300x600_Hunter.htm
@@ -165,7 +165,7 @@
                 cta.style.width = cta.offsetWidth + 'px';
 
               } else if(layout == 'multipleimagesoffer') {
-                content.styleProperties = "{'#cta': {x:0,y:0}, '#productLableLogo': {css:{display:'block'}}}";
+                content.styleProperties = "{'#cta': {x:0,y:0}, '#productLableLogo': {css:{display:'block', left:'-5px'}}}";
                 var cta = document.querySelector("#cta");
                 cta.style.left = "15px";
                 cta.style.width = "auto";
@@ -201,7 +201,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#222233";
+            ctx.fillStyle = "#10164C";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
