--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/Stowe/728x90_Stowe.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/728x90/Stowe/728x90_Stowe.htm
@@ -168,7 +168,7 @@
                  frameText[i].style.lineHeight = '1.2';
                 }
               } else if(layout == 'multipleimagesoffer') {
-                content.styleProperties = "{'#cta': {y:25}, '#productLableLogo': {css:{display:'block'}}}";
+                content.styleProperties = "{'#cta': {y:25}, '#productLableLogo': {css:{display:'block', left:'-5px'}}}";
                 var cta = document.querySelector("#cta");
                 cta.style.left = "443px";
                 cta.style.width = "auto";
@@ -213,7 +213,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#384851";
+            ctx.fillStyle = "#10164C";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
