--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x250/MtSnow/300x250_MtSnow.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x250/MtSnow/300x250_MtSnow.htm
@@ -9,11 +9,11 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      .owners-narrow {
+      /* .owners-narrow {
         font-family: "owners-narrow";
         font-weight: 400;
         font-style: normal;
-      }
+      } */
       .poppins {
         font-family: "poppins";
         font-weight: 600;
@@ -51,7 +51,7 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left owners-narrow"
+      <div id="frameText1" class="text-left poppins"
         data-text="frameText1"
         data-style="text-align:left;"
         style="top: 171px;
@@ -62,7 +62,7 @@
           letter-spacing: 1.7px;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text-left owners-narrow"
+      <div id="frameText2" class="text-left poppins"
         data-text="frameText2"
         data-style="text-align:left;"
         style="top: 171px;
@@ -73,7 +73,7 @@
           letter-spacing: 1.7px;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text-left owners-narrow"
+      <div id="frameText3" class="text-left poppins"
         data-text="frameText3"
         data-style="text-align:left;"
         style="top: 171px;
@@ -99,7 +99,7 @@
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="owners-narrow">owners-narrow</div>
+      <!-- <div class="owners-narrow">owners-narrow</div> -->
       <div class="poppins">poppins</div>
     </div>
     <script type="text/javascript">
