--- a/E/Epic/Vail_Resort_Template(T22)/ads/300x250/SevenSprings/300x250_SevenSprings.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/300x250/SevenSprings/300x250_SevenSprings.htm
@@ -9,13 +9,23 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      .RobotoSlabBold{
+      /* .RobotoSlabBold{
         font-family: roboto-slab,serif;
         font-weight: 700;
         font-style: normal;
       }
       .MontserratExtraBold {
         font-family: montserrat, sans-serif;
+        font-weight: 800;
+        font-style: normal;
+      } */
+       .hoss-sharp-black {
+        font-family: "hoss-sharp";
+        font-weight: 700;
+        font-style: normal;
+      }
+      .hoss-sharp-heavy {
+        font-family: "hoss-sharp";
         font-weight: 800;
         font-style: normal;
       }
@@ -27,8 +37,8 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #113451;
-        background-color: #fff;
+        color: #F6FFF7;
+        background-color: #008D55;
       }
       .frame {
         position: absolute;
@@ -48,12 +58,12 @@
       <div id="backgroundImage1" style="top: 43px;width: 300px; height: auto;" class="asset-top frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="top: 43px;width: 300px; height: auto;" class="asset-top frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="top: 43px;width: 300px; height: auto;" class="asset-top frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-207px;background-color:rgba(255, 255, 255, 1.0);"></div>
-      <div id="bottomWhitePatch" class="frame" style="top:165px;background-color:rgba(255, 255, 255, 1.0);"></div>
+      <div id="topWhitePatch" class="frame" style="top:-207px;background-color:#008D55;"></div>
+      <div id="bottomWhitePatch" class="frame" style="top:165px;background-color:#008D55;"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
-      <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
+      <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none; left: -5px;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left MontserratExtraBold"
+      <div id="frameText1" class="text-left hoss-sharp-black"
         data-text="frameText1"
         style="top: 171px;
           left: 11px;
@@ -63,7 +73,7 @@
           letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text-left MontserratExtraBold"
+      <div id="frameText2" class="text-left hoss-sharp-black"
         data-text="frameText2"
         style="top: 171px;
           left: 11px;
@@ -73,7 +83,7 @@
           letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text-left MontserratExtraBold"
+      <div id="frameText3" class="text-left hoss-sharp-black"
         data-text="frameText3"
         style="top: 171px;
           left: 11px;
@@ -83,7 +93,7 @@
           letter-spacing: 0.02em;
           line-height: 1.15;">
       </div>
-      <div id="disclaimerText" class="text-right AlternateGothicATFMedium"
+      <div id="disclaimerText" class="text-right hoss-sharp-heavy"
         data-text="disclaimerText"
         style="top: 173px;
           right: 5px;
@@ -91,7 +101,7 @@
           color: #909090;
           letter-spacing: -0.1px;">
       </div>
-      <div id="cta" class="text MontserratExtraBold"
+      <div id="cta" class="text hoss-sharp-heavy"
         data-text="ctaText"
         data-style="padding:1px 10px 0px;"
         style="top: 197px;
@@ -101,13 +111,14 @@
           font-size: 12px;
           line-height: 20px;
           letter-spacing: 0.05em;
-          /*border-radius: 15px;*/
-          color: #113451;">
+          border-radius: 7px;
+          color: #141418;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="MontserratExtraBold">MontserratExtraBold</div>
+       <div class="hoss-sharp-black">hoss-sharp-black</div>
+      <div class="hoss-sharp-heavy">hoss-sharp-heavy</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
@@ -144,7 +155,7 @@
             // ref: 'ref.png'
             logoImage: './../images/300x250_SevenSprings_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#F99A00^#faba52',
+            ctaBtnColor: '#F6FFF7^#89EBAD',
            disclaimerText: '<sup>*</sup>TERMS APPLY',
           },
           beforeLoad: function(data){
@@ -177,7 +188,7 @@
                   frameText[i].style.left = '15px';
                   frameText[i].style.width = '270px';
                   frameText[i].style.height = '38px';
-                  frameText[i].style.textAlign = 'center';
+                  frameText[i].style.textAlign = 'left';
                 }
               } else if(layout == 'multipleimagesoffer') {
                 content.styleProperties = "{'#cta': {x:0,y:21},'#productLableLogo': {css:{display:'block'}}}";
@@ -192,7 +203,7 @@
                   frameText[i].style.left = '15px';
                   frameText[i].style.width = '270px';
                   frameText[i].style.height = '38px';
-                  frameText[i].style.textAlign = 'center';
+                  frameText[i].style.textAlign = 'left';
                 }
               }
               // else if(layout == 'multipleimages' && !document.querySelector("#backgroundImage4")) {
@@ -221,7 +232,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#113451";
+            ctx.fillStyle = "#FFFFFF";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
