--- a/E/Epic/Vail_Resort_Template(T22)/ads/728x90/MtSnow/728x90_MtSnow.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/728x90/MtSnow/728x90_MtSnow.htm
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
-      .SabonLTProBold {
+      /* .SabonLTProBold {
         font-family: linotype-sabon,sans-serif;
         font-weight: 700;
         font-style: normal;
@@ -18,7 +18,12 @@
           font-family: CocoGothicBold;
           src: url('fonts/Zetafonts - Coco Gothic Bold.woff') format("woff");
       }
-      .CocoGothicBold { font-family: CocoGothicBold; }
+      .CocoGothicBold { font-family: CocoGothicBold; } */
+      .poppins {
+        font-family: "poppins";
+        font-weight: 600;
+        font-style: normal;
+      }
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
@@ -27,8 +32,8 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #323232;
-        background-color: #fff;
+        color: #FAFFFF;
+        background-color: #006CAB;
       }
       .frame {
         position: absolute;
@@ -48,45 +53,42 @@
       <div id="backgroundImage1" style="left: 113px;height: 90px;width: auto;" class="asset-left frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="left: 113px;height: 90px;width: auto;" class="asset-left frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="left: 113px;height: 90px;width: auto;" class="asset-left frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="left:-615px;background-color:rgba(255, 255, 255, 1.0);"></div>
-      <div id="bottomWhitePatch" class="frame" style="left:424px;background-color:rgba(255, 255, 255, 1.0);"></div>
+      <div id="topWhitePatch" class="frame" style="left:-615px;background-color:#04A9DB;"></div>
+      <div id="bottomWhitePatch" class="frame" style="left:424px;background-color:#006CAB;"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left CocoGothicBold"
+      <div id="frameText1" class="text-left poppins"
         data-text="frameText1"
-        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0px;
           line-height: 1.1;">
       </div>
-      <div id="frameText2" class="text-left CocoGothicBold"
+      <div id="frameText2" class="text-left poppins"
         data-text="frameText2"
-        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0px;
           line-height: 1.1;">
       </div>
-      <div id="frameText3" class="text-left CocoGothicBold"
+      <div id="frameText3" class="text-left poppins"
         data-text="frameText3"
-        data-style="text-align:left;"
         style="top: 4px;
           left: 442px;
           width: 170px;
           height: 80px;
           font-size: 21px;
-          letter-spacing: 2.2px;
+          letter-spacing: 0px;
           line-height: 1.1;">
       </div>
-      <div id="disclaimerText" class="text-right AlternateGothicATFMedium"
+      <div id="disclaimerText" class="text-right poppins"
         data-text="disclaimerText"
         style="bottom: -2px;
           right: 20px;
@@ -94,9 +96,9 @@
           color: #919195;
           letter-spacing: -0.1px;">
       </div>
-      <div id="cta" class="text CocoGothicBold"
+      <div id="cta" class="text poppins"
         data-text="ctaText"
-        data-style="padding:1px 10px 0px;"
+        data-style="padding:2px 10px 0px;"
         style="top: -6px;
           left: 623px;
           width: 94px;
@@ -104,13 +106,12 @@
           font-size: 12px;
           line-height: 20px;
           border-radius: 12px;
-          color: #fff;">
+          color: #FAFFFF;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="SabonLTProBold">SabonLTProBold</div>
-      <div class="CocoGothicBold">CocoGothicBold</div>
+      <div class="poppins">poppins</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
@@ -147,7 +148,7 @@
             // ref: 'ref.png'
             logoImage: './../images/728x90_MtSnow_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
-            ctaBtnColor: '#E31837^#000000',
+            ctaBtnColor: '#04A9DB^#00468C',
             disclaimerText: '<sup>*</sup>TERMS APPLY',
           },
           beforeLoad: function(data){
@@ -228,7 +229,7 @@
             canvas.width = this.width;
             canvas.height = this.height;
             document.body.appendChild(canvas);
-            ctx.fillStyle = "#E31837";
+            ctx.fillStyle = "#FFFFFF";
             ctx.fillRect(0, 0, canvas.width, canvas.height);
             ctx.globalCompositeOperation = 'destination-in';
             ctx.drawImage(this, 0, 0);
