--- a/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/728x90/MtSnow/728x90_MtSnow.htm
+++ b/E/Epic/Vail_Resort_Template(T13)_Dynamic FooterLogo/ads/728x90/MtSnow/728x90_MtSnow.htm
@@ -41,7 +41,7 @@
       <div id="backgroundImage1" style="left: 113px;height: 90px;width: auto;" class="asset-left frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" style="left: 113px;height: 90px;width: auto;" class="asset-left frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" style="left: 113px;height: 90px;width: auto;" class="asset-left frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="left:-615px;background-color:#006CAB;"></div>
+      <div id="topWhitePatch" class="frame" style="left:-615px;background-color:#04A9DB;"></div>
       <div id="bottomWhitePatch" class="frame" style="left:424px;background-color:#006CAB;"></div>
       <div id="productLableLogoBg" class="asset frame" data-image="productLableLogoBg"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
