--- a/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/MtSunapee/300x600_MtSunapee.htm
+++ b/E/Epic/Vail_Resort_Template(T10)_Dynamic FooterLogo/ads/300x600/MtSunapee/300x600_MtSunapee.htm
@@ -39,6 +39,9 @@
       }
       #cta { background-color: !{ctaBtn}; }
       #ad:hover #cta { background-color: !{ctaBtnHover}; }
+      #logoImage {
+        top: 5px;
+      }
     </style>
   </head>
   <body>
