--- a/E/Epic/Vail_Resort_Template(T22)/ads/300x600/Northstar/300x600_Northstar.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/300x600/Northstar/300x600_Northstar.htm
@@ -14,11 +14,7 @@
           src: url('fonts/NeutraDisplay-Bold.woff') format("woff");
       }
       .NeutraDisplayBold { font-family: NeutraDisplayBold; } */
-      .DashiellFineBold {
-        font-family: "dashiell-fine", serif;
-        font-weight: 700;
-        font-style: normal;
-      }
+      .NewOrder-Medium { font-family: "new-order"; font-weight: 500;  }
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
@@ -57,10 +53,10 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="productLableLogo" class="asset frame" data-image="productLableLogo" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text DashiellFineBold"
+      <div id="frameText1" class="text-left NewOrder-Medium"
         data-text="frameText1"
-        data-style="text-align:center;"
-        style="top: 464px;
+        data-style="text-align:left;"
+        style="top: 461px;
           left: 20px;
           width: 260px;
           height: 72px;
@@ -68,10 +64,10 @@
           /* letter-spacing: 0.05em; */
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text DashiellFineBold"
+      <div id="frameText2" class="text-left NewOrder-Medium"
         data-text="frameText2"
-        data-style="text-align:center;"
-        style="top: 464px;
+        data-style="text-align:left;"
+        style="top: 461px;
           left: 20px;
           width: 260px;
           height: 72px;
@@ -79,10 +75,10 @@
           /* letter-spacing: 0.05em; */
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text DashiellFineBold"
+      <div id="frameText3" class="text-left NewOrder-Medium"
         data-text="frameText3"
-        data-style="text-align:center;"
-        style="top: 464px;
+        data-style="text-align:left;"
+        style="top: 461px;
           left: 20px;
           width: 260px;
           height: 72px;
@@ -98,7 +94,7 @@
           color: #b5b6b6;
           letter-spacing: -0.1px;">
       </div>
-      <div id="cta" class="text DashiellFineBold"
+      <div id="cta" class="text NewOrder-Medium"
         data-text="ctaText"
         data-style="padding:0 12px 0px;"
         style="top: 542px;
@@ -108,13 +104,13 @@
           font-size: 14px;
           line-height: 20px;
           /* letter-spacing: 0.05em; */
-          border-radius: 20px;
+          border-radius: 5px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="DashiellFineBold">DashiellFineBold</div>
+      <div class="NewOrder-Medium">NewOrder-Medium</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
