--- a/E/Epic/Vail_Resort_Template(T22)/ads/300x250/300x250.html
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/300x250/300x250.html
@@ -59,7 +59,7 @@
           case 'stevens pass' : case 'stevenspass' : adURL = 'StevensPass/300x250_StevensPass.htm';break;
           case 'stowe' : adURL = 'Stowe/300x250_Stowe.htm';break;
           case 'vail' : case 'vail resort' : adURL = 'Vail/300x250_Vail.htm';break;
-          case 'whistler blackcomb' : case 'whistlerblackcomb' : adURL = 'WhistlerBlackcomb/300x250_WhistlerBlackcomb.htm';break;
+          case 'whistler blackcomb' : case 'whistlerblackcomb' : case 'whistlerspanish' :  case 'whistler spanish' : adURL = 'WhistlerBlackcomb/300x250_WhistlerBlackcomb.htm';break;
           case 'epic mountain rentals' : case 'epicmountainrentals' : adURL = 'EpicMountainRentals/300x250_EpicMountainRentals.htm';break;
           case 'epic mountain rewards' : case 'epicmountainrewards' : adURL = 'EpicMountainRewards/300x250_EpicMountainRewards.htm';break;
           case 'seven springs' : case 'sevensprings' : adURL = 'SevenSprings/300x250_SevenSprings.htm';break;
