--- a/E/Epic/Vail_Resort_Template(T22)/ads/728x90/728x90.html
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/728x90/728x90.html
@@ -59,7 +59,7 @@
           case 'stevens pass' : case 'stevenspass' : adURL = 'StevensPass/728x90_StevensPass.htm';break;
           case 'stowe' : adURL = 'Stowe/728x90_Stowe.htm';break;
           case 'vail' : case 'vail resort' : adURL = 'Vail/728x90_Vail.htm';break;
-          case 'whistler blackcomb' : case 'whistlerblackcomb' : adURL = 'WhistlerBlackcomb/728x90_WhistlerBlackcomb.htm';break;
+          case 'whistler blackcomb' : case 'whistlerblackcomb' : case 'whistlerspanish' :  case 'whistler spanish' : adURL = 'WhistlerBlackcomb/728x90_WhistlerBlackcomb.htm';break;
           case 'epic mountain rentals' : case 'epicmountainrentals' : adURL = 'EpicMountainRentals/728x90_EpicMountainRentals.htm';break;
           case 'epic mountain rewards' : case 'epicmountainrewards' : adURL = 'EpicMountainRewards/728x90_EpicMountainRewards.htm';break;
           case 'seven springs' : case 'sevensprings' : adURL = 'SevenSprings/728x90_SevenSprings.htm';break;
