--- a/E/Epic/Vail_Resort_Template(T22)/ads/160x600/160x600.html
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/160x600/160x600.html
@@ -59,7 +59,7 @@
           case 'stevens pass' : case 'stevenspass' : adURL = 'StevensPass/160x600_StevensPass.htm';break;
           case 'stowe' : adURL = 'Stowe/160x600_Stowe.htm';break;
           case 'vail' : case 'vail resort' : adURL = 'Vail/160x600_Vail.htm';break;
-          case 'whistler blackcomb' : case 'whistlerblackcomb' : adURL = 'WhistlerBlackcomb/160x600_WhistlerBlackcomb.htm';break;
+          case 'whistler blackcomb' : case 'whistlerblackcomb' : case 'whistlerspanish' :  case 'whistler spanish' : adURL = 'WhistlerBlackcomb/160x600_WhistlerBlackcomb.htm';break;
           case 'epic mountain rentals' : case 'epicmountainrentals' : adURL = 'EpicMountainRentals/160x600_EpicMountainRentals.htm';break;
           case 'epic mountain rewards' : case 'epicmountainrewards' : adURL = 'EpicMountainRewards/160x600_EpicMountainRewards.htm';break;
           case 'seven springs' : case 'sevensprings' : adURL = 'SevenSprings/160x600_SevenSprings.htm';break;
