--- a/E/Epic/Vail_Resort_Template(T22)/ads/300x250/WhistlerBlackcomb/300x250_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/300x250/WhistlerBlackcomb/300x250_WhistlerBlackcomb.htm
@@ -87,7 +87,7 @@
         data-text="disclaimerText"
         style="top: 173px;
           right: 5px;
-          font-size: 8px;
+          font-size: 6px;
           color: #C7DBEB;
           letter-spacing: -0.1px;">
       </div>
@@ -145,7 +145,7 @@
             logoImage: './../images/300x250_WhistlerBlackcomb_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
             ctaBtnColor: '#000000^#4d4d4f',
-           disclaimerText: '<sup>*</sup>TERMS APPLY',
+           disclaimerText: '<sup>*</sup>SE APLICAN TÉRMINOS',
           },
           beforeLoad: function(data){
             data.map(function(content){
