--- a/E/Epic/Vail_Resort_Template(T22)/ads/320x50/320x50.html
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/320x50/320x50.html
@@ -59,7 +59,7 @@
           case 'stevens pass' : case 'stevenspass' : adURL = 'StevensPass/320x50_StevensPass.htm';break;
           case 'stowe' : adURL = 'Stowe/320x50_Stowe.htm';break;
           case 'vail' : case 'vail resort' : adURL = 'Vail/320x50_Vail.htm';break;
-          case 'whistler blackcomb' : case 'whistlerblackcomb' : adURL = 'WhistlerBlackcomb/320x50_WhistlerBlackcomb.htm';break;
+          case 'whistler blackcomb' : case 'whistlerblackcomb' : case 'whistlerspanish' :  case 'whistler spanish' : adURL = 'WhistlerBlackcomb/320x50_WhistlerBlackcomb.htm';break;
           case 'epic mountain rentals' : case 'epicmountainrentals' : adURL = 'EpicMountainRentals/320x50_EpicMountainRentals.htm';break;
           case 'epic mountain rewards' : case 'epicmountainrewards' : adURL = 'EpicMountainRewards/320x50_EpicMountainRewards.htm';break;
           case 'seven springs' : case 'sevensprings' : adURL = 'SevenSprings/320x50_SevenSprings.htm';break;
