--- a/E/Epic/Vail_Resort_Template(T22)/ads/320x50/WhistlerBlackcomb/320x50_WhistlerBlackcomb.htm
+++ b/E/Epic/Vail_Resort_Template(T22)/ads/320x50/WhistlerBlackcomb/320x50_WhistlerBlackcomb.htm
@@ -148,7 +148,7 @@
             logoImage: './../images/320x50_WhistlerBlackcomb_LogoImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
             ctaBtnColor: '#000000^#4d4d4f',
-            disclaimerText: '<sup>*</sup>TERMS APPLY',
+            disclaimerText: '<sup>*</sup>SE APLICAN TÉRMINOS',
           },
           beforeLoad: function(data){
             data.map(function(content){
